# cooling_demand_UK

./: .env  .gitignore  .style.yapf  README.md  Venv-for-windows.txt  pyproject.toml  requirements.txt
degree_days/Scripts/: activate  activate.bat  get_objgraph  undill
notebooks/: GB_dataset.ipynb  PVlib.ipynb  South_wales_substation.ipynb  UKPN_PV_analysis.ipynb  calculating_degree_days.ipynb  cooling_energy_demand.ipynb  cooling_energy_demand_by_LA.ipynb  import_data_from_ERA5.ipynb  validation_cooling_demand.ipynb  validation_cooling_demand_extra_data.ipynb  visualisation_CIBSE_weather.ipynb  visualisation_GB.ipynb  visualisation_paper.ipynb  visualisation_paper_sensitivity.ipynb
notebooks/old/: UKPN_PV_analysis.ipynb
src/: config.py  main.py
src/common/: enums.py  functions.py  schema.py  sim_param.py  viz_functions.py
src/data/: source.py
src/models/: building_stock.py  dwelling_functions.py  thermal_model.py  validation.py
