[tool.poetry]
name = "degree-days-analysis"
version = "0.1.0"
description = ""
authors = ["Alexandre Canet <canet.alexandre@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
geopandas = "^0.14.3"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
ipykernel = "^6.29.4"
pytest = "^8.1.1"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
