[tool.poetry]
name = "degree-days-analysis"
version = "0.1.0"
description = ""
authors = ["alexandre-canet-E2S <121625353+alexandre-canet-E2S@users.noreply.github.com>"]
readme = "README.md"
packages = [ {include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
geopandas = "^1.0.1"
numpy = "^2.2.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xarray = "^2024.11.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
pydantic-settings = "^2.7.0"
pvlib = "0.11.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
yapf = "^0.43.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
